# mysite

./: .flake8  .gitignore  db.sqlite3  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_followers.py  0003_alter_user_followers.py  0004_alter_user_followers.py  0005_alter_user_followers.py  0006_alter_user_followers.py  0007_alter_user_followers.py  0008_alter_user_followers.py
accounts/templates/accounts/: followers_and_followed.html  index.html  profile.html  register.html  register_done.html
accounts/templates/accounts/registration/: login.html
mysite/: settings.py  urls.py
polls/: forms.py  models.py  urls.py  views.py
polls/migrations/: 0002_user_followers.py  0003_alter_user_followers.py  0004_alter_user_followers.py  0005_alter_user_followers.py  0006_alter_user_followers.py  0007_alter_user_followers.py  0008_alter_user_followers.py
polls/templates/polls/: index.html  profile.html  register.html  register_done.html  sign_in.html
post/: admin.py  forms.py  models.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_alter_post_likes.py  0002_post_author.py
post/templates/post/: detail_view.html  likes.html  post_create.html  post_delete.html  post_update.html
