[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
Pillow = "^9.4.0"
setuptools = "^66.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
